@startuml

    skinparam classAttributeIconSize 0

    namespace ch.tofind.commusica.core {

        abstract class AbstractCore {
            {static} -LOG: Logger
            +execute(String, ArrayList<Object>): String
            {abstract} ~sendUnicast(InetAddress, String): void
            {abstract} ~sendMulticast(String): void
            {abstract} ~stop(): void
            {abstract} ~isServer(): boolean
        }

        class ServerCore {
            {static} -LOG: Logger
            {static} -TIME_BEFORE_PLAYLIST_UPDATE: int
            {static} -name: String
            -multicast: MulticastClient
            -server: Server
            -userSessionManager: UserSessionManager
            -broadcastPlaylist: ScheduledExecutorService
            +END_OF_COMMUNICATION(ArrayList<Object>): String
            +isServer(): boolean
        }

        class ClientCore {
            {static} -LOG: Logger
            -multicast: MulticastClient
            -client: UnicastClient
            -fileToSend: File
            -trackToSend: Track
            -serverSessionManager: ServerSessionManager
            -threadPool: ExecutorService
            +END_OF_COMMUNICATION(ArrayList<Object>): String
            +isServer(): boolean
        }

        class Core {
            {static} -instance: AbstractCore
            {static} +execute(String, ArrayList<Object>): String
            {static} +isServer(): boolean
            {static} +setupAsServer(): void
            {static} +setupAsClient(): void
            {static} +stop(): void
        }

        interface ICore {
            {abstract} +sendUnicast(InetAddress, String): void
            {abstract} +sendMulticast(String): void
            {abstract} +stop(): void
        }

        AbstractCore <|-- ServerCore

        ICore <|.. ServerCore

        AbstractCore <|-- ClientCore

        ICore <|.. ClientCore

    }

@enduml
